WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234975
WebKit::DownloadProxy::publishProgress() falls through ASSERT_NOT_REACHED()
https://bugs.webkit.org/show_bug.cgi?id=234975
Summary
WebKit::DownloadProxy::publishProgress() falls through ASSERT_NOT_REACHED()
David Kilzer (:ddkilzer)
Reported
2022-01-07 11:55:59 PST
WebKit::DownloadProxy::publishProgress() falls through ASSERT_NOT_REACHED(). There should be an early return in the `else` block after ASSERT_NOT_REACHED(). #if PLATFORM(COCOA) void DownloadProxy::publishProgress(const URL& URL) { if (!m_dataStore) return; SandboxExtension::Handle handle; if (auto createdHandle = SandboxExtension::createHandle(URL.fileSystemPath(), SandboxExtension::Type::ReadWrite)) handle = WTFMove(*createdHandle); else ASSERT_NOT_REACHED(); m_dataStore->networkProcess().send(Messages::NetworkProcess::PublishDownloadProgress(m_downloadID, URL, handle), 0); } #endif // PLATFORM(COCOA) See Source/WebKit/UIProcess/Downloads/DownloadProxy.cpp.
Attachments
Patch
(2.03 KB, patch)
2022-01-19 10:00 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-01-07 11:56:18 PST
<
rdar://problem/87265153
>
Chris Dumez
Comment 2
2022-01-19 10:00:44 PST
Created
attachment 449491
[details]
Patch
EWS
Comment 3
2022-01-19 12:39:51 PST
Committed
r288232
(
246189@main
): <
https://commits.webkit.org/246189@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 449491
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug