Cherry-pick r288232. rdar://problem/87265153

WebKit::DownloadProxy::publishProgress() falls through ASSERT_NOT_REACHED()
    https://bugs.webkit.org/show_bug.cgi?id=234975
    <rdar://problem/87265153>

    Reviewed by Darin Adler.

    * UIProcess/Downloads/DownloadProxy.cpp:
    (WebKit::DownloadProxy::publishProgress):
    Let's not send the IPC if we failed to create the handle since the recipient code early returns when the handle is
    invalid.

    Canonical link: https://commits.webkit.org/246189@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288232 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.32@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@288514 268f45cc-cd09-0410-ab3c-d52691b4dbfc